# cascadia-margin-lipids

./: .gitignore  README.md  notes.rtf  pyproject.toml  style.mplstyle
analysis/: Bayspar_preds.m  CM_plotting_script.ipynb  data_figures.ipynb  model_figures.ipynb  synthetic_peaks.ipynb  test_model.ipynb
artifacts/: GDGT_dist_table.xlsx  d13C_endmember_boundaries.xlsx
data/processed/: CascadiaMargin_carbon_abundance.xlsx  CascadiaMargin_glyc_degrad_prod.xlsx  CascadiaMargin_index_values.xlsx
data/raw/Astoria/: 220128_Aquisition_KKELLER_SWiM_CascadiaMarginGDGTs.xlsx  220215_Keller_SWiM_CascadiaMargin-Aquisitiondata.xlsx  230323_astoria_QQQ.csv  240205_QQQ_astoria_canyon.csv
data/raw/Hydrate/: 230123_Keller_SWiM_HydrateRidge.xlsx  230124_Keller_SWiM_HydrateRIDGE.xlsx  230131_Keller_SWIM_hydrateridge.xlsx  230221_Keller_SWiM_HydrateRige.xlsx  230222_Keller_SWiM_HydrateRidge.xlsx  230308_hydrate_QQQ.xlsx  240204_QQQ_hydrate_ridge.csv
data/raw/Mcarthur/: 220614_KK_Aquisition_Mcarthurcyn.xlsx  220616_KK_SWiM_Mcarthurcyn.xlsx  230330_mcarthur_QQQ.csv  240205_QQQ_mcarthur_canyon.csv
excel_model_worksheet/: GDGT_isobalance.xlsx
