[tool.poetry]
name = "cascadia-margin-lipids"
version = "0.1.0"
description = "data and code repository for archaeal lipid 13C measurements and relative abundance measurements"
authors = ["Katherine Keller <katherinekeller@g.harvard.edu>", "Mark Baum <markmbaum@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ipykernel = "^6.28.0"
matplotlib = "^3.8.2"
pandas = "2.2.0"
seaborn = "^0.13.1"
pymc = "^5.10.3"
arviz = "^0.17.0"
pyarrow = "^15.0.0"
openpyxl = "^3.1.2"
python-ternary = "^1.0.8"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
